Fixes to submissin form

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ button.green.small {
 /* intro section */
 
 .eight.center {
-	margin-left: 9.6667%;
+	/*margin-left: 9.6667%;*/
 }
 
 #section-intro .row .eight {
